DRY out repeated logic in core and add data model to http error class
